versions/v4.0.0/doxygen/html/globals_eval_e.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/doxygen/html/globals_eval_e.html
original_path: doxygen/html/globals_eval_e.html
---

| Logo | Zephyr API Documentation 4.0.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - e -

- E8042\_CLEAR\_FLAG : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310ea5c592b1cad381b296cde832c67264cd1)
- E8042\_CLEAR\_OBF : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310eacdeb74a9534310f5dab3f1bfb5def534)
- E8042\_IBF\_HAS\_CHAR : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310eab70684413d736c8583f3dc53f14b7c7a)
- E8042\_OBF\_HAS\_CHAR : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310eac172afb38cb38970ef6242a4f45132f9)
- E8042\_PAUSE\_IRQ : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310ea5e7205b5f1371f1a0f2eaed299389475)
- E8042\_READ\_KB\_STS : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310ea8c62cd1266681c88aa0cb1af65ab551b)
- E8042\_RESUME\_IRQ : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310eac5b666b3319dc2ef0fc571684c2ea198)
- E8042\_SET\_FLAG : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310ea83266d88740588d45be6667a4034c447)
- E8042\_WRITE\_KB\_CHAR : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310eaa9135a5ea9a5ebd9d25660c37983c5d6)
- E8042\_WRITE\_MB\_CHAR : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310eaaef0649f867424ec0c7889acb7354911)
- EACPI\_IBF\_HAS\_CHAR : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310ea09f241a3f6ffcb5b7839c81c7fc4ea6e)
- EACPI\_OBF\_HAS\_CHAR : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310ea3cce8bd0205691ecda53fc469606929d)
- EACPI\_READ\_STS : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310ea02bf8538a66f633e3d2ec094f57c6173)
- EACPI\_WRITE\_CHAR : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310ea689643f6feb724a303d3b790ff2899f7)
- EACPI\_WRITE\_STS : [espi.h](group__espi__interface.md#ggad00b6a22843e5df9c6d6945d0d82310ea02c7b1c69d803a5c45304260786afb6f)
- EC\_HOST\_CMD\_ACCESS\_DENIED : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fad8fef524b7ccf571f7abdf8dec56fb5c)
- EC\_HOST\_CMD\_BUS\_ERROR : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fadeb0f80d5150733aa4f1803ee2b19fd2)
- EC\_HOST\_CMD\_BUSY : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa20b2d8c80da5ba25bb06501eec00afa1)
- EC\_HOST\_CMD\_DEBUG\_EVERY : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga70cbd55129ef589688c6d2f5999337c9a6c10f7c18f897dc5475cd4b6fcf199d6)
- EC\_HOST\_CMD\_DEBUG\_MODES : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga70cbd55129ef589688c6d2f5999337c9a8fe3708b71fbb8e82cc799dc42b7231b)
- EC\_HOST\_CMD\_DEBUG\_NORMAL : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga70cbd55129ef589688c6d2f5999337c9a9b5eaf7f57c8fb8537995ac2cd932c81)
- EC\_HOST\_CMD\_DEBUG\_OFF : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga70cbd55129ef589688c6d2f5999337c9a7f293daec1f211c20145b25728421d38)
- EC\_HOST\_CMD\_DEBUG\_PARAMS : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga70cbd55129ef589688c6d2f5999337c9a7b4ec42c191d5a4231a2b1551c6e45a1)
- EC\_HOST\_CMD\_DUP\_UNAVAILABLE : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa3897851061e4708d98f2ca385bea1a80)
- EC\_HOST\_CMD\_ERROR : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa45e8b4169e1a88afcb3be1011f2da201)
- EC\_HOST\_CMD\_IN\_PROGRESS : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa619eeb03065f2729a69c7f26c90d8c2e)
- EC\_HOST\_CMD\_INVALID\_CHECKSUM : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa6ba692b3ff01ab6f382e7d5e4a7dd301)
- EC\_HOST\_CMD\_INVALID\_COMMAND : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fad43b4a713754d52b77313f2222fe2432)
- EC\_HOST\_CMD\_INVALID\_DATA\_CRC : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa370917fb952a8ed478260290dc59c985)
- EC\_HOST\_CMD\_INVALID\_HEADER : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa48a29fa396646f39c6d95f28d6ce986b)
- EC\_HOST\_CMD\_INVALID\_HEADER\_CRC : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa9a7bc527e81b60c2af1b3e16d17ac57e)
- EC\_HOST\_CMD\_INVALID\_HEADER\_VERSION : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa4c242c6a48fdf8991488df445512fcc5)
- EC\_HOST\_CMD\_INVALID\_PARAM : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fae252c89c64d8ee5d65d7e6cf42c8fe1d)
- EC\_HOST\_CMD\_INVALID\_RESPONSE : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8faff7377e35d78c46ae49085488e7e71b9)
- EC\_HOST\_CMD\_INVALID\_VERSION : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa6b0ab5efe8c76a022787be84b43e1b39)
- EC\_HOST\_CMD\_MAX : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fad202e5ae4fac72a7fb3d1f4a7dff3ba9)
- EC\_HOST\_CMD\_OVERFLOW : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fae62986949bad505a8be6c46d19b4e443)
- EC\_HOST\_CMD\_REQUEST\_TRUNCATED : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa35758ca8b95b79a7c1140319164a7c00)
- EC\_HOST\_CMD\_RESPONSE\_TOO\_BIG : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fae6cadca18d937481814ae72023d54ff5)
- EC\_HOST\_CMD\_STATE\_DISABLED : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#ggabf0f1243bf55cb70078f2a9fd0a755eca394e27c2841c50c94daf273712a3a7af)
- EC\_HOST\_CMD\_STATE\_PROCESSING : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#ggabf0f1243bf55cb70078f2a9fd0a755eca2e0d060db73eba1e4ecf9726868f6ed8)
- EC\_HOST\_CMD\_STATE\_RECEIVING : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#ggabf0f1243bf55cb70078f2a9fd0a755eca009b14c05655b9ebfdfac70fc77d2e20)
- EC\_HOST\_CMD\_STATE\_SENDING : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#ggabf0f1243bf55cb70078f2a9fd0a755ecac766c64d188e3df91f7ed40a84a9ef46)
- EC\_HOST\_CMD\_SUCCESS : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa6a6e394a69d6575caf92646a63195b4e)
- EC\_HOST\_CMD\_TIMEOUT : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fadeacab16ecc96772c137b65352dddf26)
- EC\_HOST\_CMD\_UNAVAILABLE : [ec\_host\_cmd.h](group__ec__host__cmd__interface.md#gga9b0b87983dcc92ea55ebfa1aecf82a8fa75dc8b9ba661e52c48735ea85360e996)
- EDAC\_ERROR\_TYPE\_DRAM\_COR : [edac.h](group__edac.md#gga3eb3da4d056d8e6167083301eb1276d6a941e09125e6040d7114ee17328fd4b02)
- EDAC\_ERROR\_TYPE\_DRAM\_UC : [edac.h](group__edac.md#gga3eb3da4d056d8e6167083301eb1276d6a5b03fd27f37f01171e50c2997bc29a2f)
- EIRQ\_NXP\_S32\_BOTH\_EDGES : [intc\_eirq\_nxp\_s32.h](intc__eirq__nxp__s32_8h.md#a4ad183c371a2c771d01a0dfa5c1eff86ab25e6b0b4ee8d3ebd9e2e242c8e82bb7)
- EIRQ\_NXP\_S32\_FALLING\_EDGE : [intc\_eirq\_nxp\_s32.h](intc__eirq__nxp__s32_8h.md#a4ad183c371a2c771d01a0dfa5c1eff86a7306132c5251e0d45fe0b1e6b9003992)
- EIRQ\_NXP\_S32\_RISING\_EDGE : [intc\_eirq\_nxp\_s32.h](intc__eirq__nxp__s32_8h.md#a4ad183c371a2c771d01a0dfa5c1eff86a1f4e7e897a5e966cbe32b6bc858ccbcc)
- EMUL\_BUS\_TYPE\_ESPI : [emul.h](group__io__emulators.md#gga39b7a9438507b0be95038fe9464762aaa58714c3eeb3b9828fab041bd9a9f6ec1)
- EMUL\_BUS\_TYPE\_I2C : [emul.h](group__io__emulators.md#gga39b7a9438507b0be95038fe9464762aaa37469f6df0ab808efe8d8a28f3424b5f)
- EMUL\_BUS\_TYPE\_MSPI : [emul.h](group__io__emulators.md#gga39b7a9438507b0be95038fe9464762aaa532ba489c52ce6919751fc1a45f70a46)
- EMUL\_BUS\_TYPE\_NONE : [emul.h](group__io__emulators.md#gga39b7a9438507b0be95038fe9464762aaa942dd8fbb58d92fc987b0b2715a4a15d)
- EMUL\_BUS\_TYPE\_SPI : [emul.h](group__io__emulators.md#gga39b7a9438507b0be95038fe9464762aaa037e86fa4d585eac9420053d869b423a)
- EMUL\_BUS\_TYPE\_UART : [emul.h](group__io__emulators.md#gga39b7a9438507b0be95038fe9464762aaae93177d41e38aa873c603fb606db13b6)
- ENTTM\_EXIT\_TEST\_MODE : [ccc.h](group__i3c__ccc.md#gga364bcd9863f82fcc13aeb59ca7ad6504a67ee57431fe7b181792507f9ec7d7207)
- ENTTM\_VENDOR\_TEST\_MODE : [ccc.h](group__i3c__ccc.md#gga364bcd9863f82fcc13aeb59ca7ad6504aaf523080c395d41aaf0ea5112d93e530)
- ENUM\_MGMT\_ERR\_INDEX\_TOO\_LARGE : [enum\_mgmt.h](group__mcumgr__enum__mgmt.md#ggaceaae2d8284b4a64b1303513e6aa3099af2dff8560e72db54fea41a6345aa5f72)
- ENUM\_MGMT\_ERR\_INSUFFICIENT\_HEAP\_FOR\_ENTRIES : [enum\_mgmt.h](group__mcumgr__enum__mgmt.md#ggaceaae2d8284b4a64b1303513e6aa3099ac056ab2ae764f50715d9ee478bc0c153)
- ENUM\_MGMT\_ERR\_OK : [enum\_mgmt.h](group__mcumgr__enum__mgmt.md#ggaceaae2d8284b4a64b1303513e6aa3099aab31067e337c3220232e8eb3b3d885c0)
- ENUM\_MGMT\_ERR\_TOO\_MANY\_GROUP\_ENTRIES : [enum\_mgmt.h](group__mcumgr__enum__mgmt.md#ggaceaae2d8284b4a64b1303513e6aa3099a7866b895eac198fe6eb021ef385a185e)
- ENUM\_MGMT\_ERR\_UNKNOWN : [enum\_mgmt.h](group__mcumgr__enum__mgmt.md#ggaceaae2d8284b4a64b1303513e6aa3099a7f535a752e4c789024e4fecb5cdd7c7f)
- errADDRESS : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a7465c34dd18ad03c8cbe13e3d395c902)
- errCHECK\_ERASED : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a65c1f54049798ea81c7d1719f166a1be)
- errERASE : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a5816bb25bcc32867630963dba649cc54)
- errFILE : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a56c7583a5956d85dc99cf250f8c7771e)
- errFIRMWARE : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a770d6396237b7deac15001165ef9c9bb)
- errNOTDONE : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31af30286bf44938bdea942a7f3c513d998)
- errPOR : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a992b1de144265596023b92aa21094ecb)
- errPROG : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31aacb4bde78f2c57c18dc2dc3d5249f2c8)
- errSTALLEDPKT : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a0123f1a634c8d384393557aedecb0788)
- errTARGET : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a4f6d9b9397bdaf8c52b1a3b21814795d)
- errUNKNOWN : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31aa69cd762eb2bcefece21d4601c51f471)
- errUSB : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a7006bd30ea4310800fa059ddc8d30947)
- errVENDOR : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a08770dc5628ca360ef8a5ecfdf3d2210)
- errVERIFY : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a251a276fd7bfe2744888dc97fe956aff)
- errWRITE : [usb\_dfu.h](usb__dfu_8h.md#abcf2757cf1c6281a06a8a6f25ff2aa31a62181eec68b16d43c1aee03174f9bba1)
- ESP\_GDMA\_TRIG\_PERIPH\_ADC0 : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327a38744227c79336f2db9e6fd14d8c805c)
- ESP\_GDMA\_TRIG\_PERIPH\_AES : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327a7901089e4ae68dd2b40a6bacadf77c5e)
- ESP\_GDMA\_TRIG\_PERIPH\_CAM0 : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327ab2c7701395a9d82a0ed9c4bb4e8253e3)
- ESP\_GDMA\_TRIG\_PERIPH\_DAC0 : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327aedc593bcb0a7a3b45421236ac949016a)
- ESP\_GDMA\_TRIG\_PERIPH\_I2S0 : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327add6f1747f2a83c9d3aa5ce964f2f778c)
- ESP\_GDMA\_TRIG\_PERIPH\_I2S1 : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327a2510728ddf6355787f9ad566f3e9c65a)
- ESP\_GDMA\_TRIG\_PERIPH\_INVALID : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327a8c184ff1753827aaf1977acce3610459)
- ESP\_GDMA\_TRIG\_PERIPH\_LCD0 : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327a4499557060bcd39e13bb9273133de6f2)
- ESP\_GDMA\_TRIG\_PERIPH\_M2M : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327a52ce4370e4d1ab49ac75d36ef369ed7b)
- ESP\_GDMA\_TRIG\_PERIPH\_RMT : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327a3cd1f282d8c5eeb69d5dc396a638f51a)
- ESP\_GDMA\_TRIG\_PERIPH\_SHA : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327a0445fd580e2f953978c59756b6d3f663)
- ESP\_GDMA\_TRIG\_PERIPH\_SPI2 : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327af3875d4400d233efa891515e4304fdde)
- ESP\_GDMA\_TRIG\_PERIPH\_SPI3 : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327acc572dc1c473a5906c780727da2e2250)
- ESP\_GDMA\_TRIG\_PERIPH\_UHCI0 : [dma\_esp32.h](dma__esp32_8h.md#a45ccc721bb7cd992658cc180f34cf327a7708a6f78ebeffeb1339a3f3fc46805b)
- ESPI\_BUS\_EVENT\_CHANNEL\_READY : [espi.h](group__espi__interface.md#gga36ac3fbf9813f78bad90f047e1eb1128a996aee0a8f8ba0cead11cea0d39d2973)
- ESPI\_BUS\_EVENT\_OOB\_RECEIVED : [espi.h](group__espi__interface.md#gga36ac3fbf9813f78bad90f047e1eb1128a3b5e529d1d0ba11c59172ab01c30e203)
- ESPI\_BUS\_EVENT\_VWIRE\_RECEIVED : [espi.h](group__espi__interface.md#gga36ac3fbf9813f78bad90f047e1eb1128aa09f7dcd4b2d3addfaddbad5b8f2e5a2)
- ESPI\_BUS\_PERIPHERAL\_NOTIFICATION : [espi.h](group__espi__interface.md#gga36ac3fbf9813f78bad90f047e1eb1128a9ac837699f302bd10332814c7014adea)
- ESPI\_BUS\_RESET : [espi.h](group__espi__interface.md#gga36ac3fbf9813f78bad90f047e1eb1128ae6d4d43eded0d8a368c90ea653a60956)
- ESPI\_BUS\_TAF\_NOTIFICATION : [espi.h](group__espi__interface.md#gga36ac3fbf9813f78bad90f047e1eb1128a9f2a9cfda3b803687a0992a9d41f0014)
- ESPI\_CHANNEL\_FLASH : [espi.h](group__espi__interface.md#ggafaa3f7d54503c901ab23bd79a7f8a755a5616bf2bf49a8c457fcc2f27d9fe0518)
- ESPI\_CHANNEL\_OOB : [espi.h](group__espi__interface.md#ggafaa3f7d54503c901ab23bd79a7f8a755a0ccb80544cbda501cc90ea0c3b868e54)
- ESPI\_CHANNEL\_PERIPHERAL : [espi.h](group__espi__interface.md#ggafaa3f7d54503c901ab23bd79a7f8a755a32f636bbad2618a6b1554656d3b53206)
- ESPI\_CHANNEL\_VWIRE : [espi.h](group__espi__interface.md#ggafaa3f7d54503c901ab23bd79a7f8a755ac2e84a127870ff50359cf96528c9a7c6)
- ESPI\_CYCLE\_MEMORY\_READ32 : [espi.h](group__espi__interface.md#gga3e52615f244d7fa8ccda495ab8ec8a5ba5b480e093a58849d4181bba22d5868a5)
- ESPI\_CYCLE\_MEMORY\_READ64 : [espi.h](group__espi__interface.md#gga3e52615f244d7fa8ccda495ab8ec8a5bac8ec7673b4466b278dfb5e468f7a4d79)
- ESPI\_CYCLE\_MEMORY\_WRITE32 : [espi.h](group__espi__interface.md#gga3e52615f244d7fa8ccda495ab8ec8a5ba2e5a736cf8a63491ee13d51ae4f8f073)
- ESPI\_CYCLE\_MEMORY\_WRITE64 : [espi.h](group__espi__interface.md#gga3e52615f244d7fa8ccda495ab8ec8a5ba54c11e63fcfe3f859af57e65af3f31f7)
- ESPI\_CYCLE\_MESSAGE\_DATA : [espi.h](group__espi__interface.md#gga3e52615f244d7fa8ccda495ab8ec8a5ba380e3d4e6b5579c8bb94e792fcb7d71f)
- ESPI\_CYCLE\_MESSAGE\_NODATA : [espi.h](group__espi__interface.md#gga3e52615f244d7fa8ccda495ab8ec8a5ba5f2ae0575ca4e9b61c0acd7d4f08ee82)
- ESPI\_CYCLE\_NOK\_COMPLETION\_NODATA : [espi.h](group__espi__interface.md#gga3e52615f244d7fa8ccda495ab8ec8a5ba0edb306e5fabcbf8b009375cde6a8a2b)
- ESPI\_CYCLE\_OK\_COMPLETION\_NODATA : [espi.h](group__espi__interface.md#gga3e52615f244d7fa8ccda495ab8ec8a5ba0335f2d34fab46960939e2d2c1c12e3f)
- ESPI\_CYCLE\_OKCOMPLETION\_DATA : [espi.h](group__espi__interface.md#gga3e52615f244d7fa8ccda495ab8ec8a5baf3dbc2bcc0ed883bc4d4160c21e6934f)
- ESPI\_IO\_MODE\_DUAL\_LINES : [espi.h](group__espi__interface.md#gga0d7c61f1f4ec611d0c8a67ba73e2b4f0af766582d28d16af7c5aff6372e4ee243)
- ESPI\_IO\_MODE\_QUAD\_LINES : [espi.h](group__espi__interface.md#gga0d7c61f1f4ec611d0c8a67ba73e2b4f0a87e70bb0f5c4f6a3a21ca1bcfa4540fc)
- ESPI\_IO\_MODE\_SINGLE\_LINE : [espi.h](group__espi__interface.md#gga0d7c61f1f4ec611d0c8a67ba73e2b4f0a9f47188ebd9bb4cb6e426d0bc0b6595c)
- ESPI\_PC\_EVT\_BUS\_CHANNEL\_READY : [espi.h](group__espi__interface.md#ggac55098842dd9d181144ac4b4122a610ea68ecb52b04ffddcc93fbcc77d3643687)
- ESPI\_PC\_EVT\_BUS\_MASTER\_ENABLE : [espi.h](group__espi__interface.md#ggac55098842dd9d181144ac4b4122a610ea0e245cbeef479218d4e6c9bec57e40d1)
- ESPI\_PERIPHERAL\_8042\_KBC : [espi.h](group__espi__interface.md#gga2629a5518a94f031419eeccd05f07373aaea75bb5ab8a5ff31dd6b8787f44df30)
- ESPI\_PERIPHERAL\_DEBUG\_PORT80 : [espi.h](group__espi__interface.md#gga2629a5518a94f031419eeccd05f07373af51b7171cf6085fa7946333ff32fe2f0)
- ESPI\_PERIPHERAL\_HOST\_IO : [espi.h](group__espi__interface.md#gga2629a5518a94f031419eeccd05f07373a8948a6f18bfbe87859a529d5f6e669b8)
- ESPI\_PERIPHERAL\_HOST\_IO\_PVT : [espi.h](group__espi__interface.md#gga2629a5518a94f031419eeccd05f07373aa217b4786d7b8bacbaa4ec740550e71e)
- ESPI\_PERIPHERAL\_UART : [espi.h](group__espi__interface.md#gga2629a5518a94f031419eeccd05f07373a24478711945fd5258d8ca86bbb79b867)
- ESPI\_VWIRE\_SIGNAL\_COUNT : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ad3319083735295454bc59b742988cfca)
- ESPI\_VWIRE\_SIGNAL\_DNX\_ACK : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a58280c68c980476aabefa16e0509dd1c)
- ESPI\_VWIRE\_SIGNAL\_DNX\_WARN : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a923f3e602d9f8ac821ece2a625183146)
- ESPI\_VWIRE\_SIGNAL\_ERR\_FATAL : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35aae0a3fd882c5765db33a4e7bd05e1ab1)
- ESPI\_VWIRE\_SIGNAL\_ERR\_NON\_FATAL : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a504ae332b89262f70a0bf1a9c8b6f527)
- ESPI\_VWIRE\_SIGNAL\_HOST\_C10 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ab9deb0dd6d4e878eff6413ddc34bb36c)
- ESPI\_VWIRE\_SIGNAL\_HOST\_RST\_ACK : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a89420628ae26df4c45ef7fba04a3a85e)
- ESPI\_VWIRE\_SIGNAL\_HOST\_RST\_WARN : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35af44250de6f60eabf9b0d85b8860ac56e)
- ESPI\_VWIRE\_SIGNAL\_NMIOUT : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ad14b4b7a25141346bfefc507c588a238)
- ESPI\_VWIRE\_SIGNAL\_OOB\_RST\_ACK : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a8e15df6f8159b4c275dc4b20aaec352e)
- ESPI\_VWIRE\_SIGNAL\_OOB\_RST\_WARN : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a2f3f97b51b750050cd98e887e39431d1)
- ESPI\_VWIRE\_SIGNAL\_PLTRST : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a0bafcd0bb7f592f0e308dcfce39bcd08)
- ESPI\_VWIRE\_SIGNAL\_PME : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35aa87af5b5de184238e5f371851aaee692)
- ESPI\_VWIRE\_SIGNAL\_RST\_CPU\_INIT : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a19c40230e0bb4cee7b6ee42580c28a8d)
- ESPI\_VWIRE\_SIGNAL\_SCI : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35afa1f99a7e45b306c6736888e280f527c)
- ESPI\_VWIRE\_SIGNAL\_SLP\_A : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35aa4c8c69475b48d88302066823d2f3592)
- ESPI\_VWIRE\_SIGNAL\_SLP\_LAN : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35aba8b891a643ca567966d091963be4615)
- ESPI\_VWIRE\_SIGNAL\_SLP\_S3 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ab880a7156e489d5f7b8f78550e72b166)
- ESPI\_VWIRE\_SIGNAL\_SLP\_S4 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a4ef1fe12bd09be0875864d6c32164f73)
- ESPI\_VWIRE\_SIGNAL\_SLP\_S5 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ac4b4e30c097a4ef49f21549a799e1e13)
- ESPI\_VWIRE\_SIGNAL\_SLP\_WLAN : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a3d95f095ae41bba9ef916fc68ddd4779)
- ESPI\_VWIRE\_SIGNAL\_SMI : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a2d9b2eef499d1bfd13bec1d2caa0e2f3)
- ESPI\_VWIRE\_SIGNAL\_SMIOUT : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a1d54a71c6d2e52cb66cfaa0b55b61152)
- ESPI\_VWIRE\_SIGNAL\_SUS\_ACK : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35abe28432b566619d8c6cce5e5034e5333)
- ESPI\_VWIRE\_SIGNAL\_SUS\_PWRDN\_ACK : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ab4f0bedd5717660cc8cac2d85c6c3d18)
- ESPI\_VWIRE\_SIGNAL\_SUS\_STAT : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a0e13f250ba0c5a37451c7f3b0e98e663)
- ESPI\_VWIRE\_SIGNAL\_SUS\_WARN : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a9e32eee077aaa1668c356fe1d4ab1cc5)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_BOOT\_DONE : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ad99ea62f91b40c8926cda944928e3631)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_BOOT\_STS : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a231caf3d46cde2eaf7305bf3f694838c)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_0 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35aa075b359a98779f42bc9447adc1b27a2)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_1 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ab4e6f770d2a8f8b0f2d2be6c392f92de)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_10 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a637b5c00aaca05e5daa6969a680cbbb1)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_11 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a07a6b00a4b1cfad2137dc43d7232fc9f)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_2 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a5e0bb79530540c15e802c852b5ee944b)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_3 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ac8c015227c6d6c2441ea811faa543b5a)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_4 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ad9b6bb998bea0bc983ab8a6c452d52a1)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_5 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35af10e9e5b320301b2fe923e6793adbeaf)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_6 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35aee0a1576a6e07708e1cde59597b49662)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_7 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35ae34962d6db346e02f175894843ce0e1e)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_8 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a8a7b50f0aa53a2c80bae7747d628d219)
- ESPI\_VWIRE\_SIGNAL\_TARGET\_GPIO\_9 : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a9410475f349afcf44ddb25ebbd454978)
- ESPI\_VWIRE\_SIGNAL\_WAKE : [espi.h](group__espi__interface.md#ggab65a0951a8912d9de398cfec0aef7d35a736724f8229aebc356c2720a34a0143f)
- ETHERNET\_AUTO\_NEGOTIATION\_SET : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a93c074b73420abed7d1f59f231da990a)
- ETHERNET\_CHECKSUM\_SUPPORT\_IPV4\_HEADER : [ethernet.h](group__ethernet.md#ggabf86b7f09a9d041eea25357cd7a85edea6485d2abcd3dae6786022aa286234ed4)
- ETHERNET\_CHECKSUM\_SUPPORT\_IPV4\_ICMP : [ethernet.h](group__ethernet.md#ggabf86b7f09a9d041eea25357cd7a85edea5671ade139cb0cd28d02e3215337acb9)
- ETHERNET\_CHECKSUM\_SUPPORT\_IPV6\_HEADER : [ethernet.h](group__ethernet.md#ggabf86b7f09a9d041eea25357cd7a85edea557127c3bc97969fe57fcd8ac55567b5)
- ETHERNET\_CHECKSUM\_SUPPORT\_IPV6\_ICMP : [ethernet.h](group__ethernet.md#ggabf86b7f09a9d041eea25357cd7a85edeac64b392a0591cfe7aa5564a476fe20be)
- ETHERNET\_CHECKSUM\_SUPPORT\_NONE : [ethernet.h](group__ethernet.md#ggabf86b7f09a9d041eea25357cd7a85edea90314c44dca3c123d1a0bd70f108524d)
- ETHERNET\_CHECKSUM\_SUPPORT\_TCP : [ethernet.h](group__ethernet.md#ggabf86b7f09a9d041eea25357cd7a85edea3346f0e3d0b350c7fe663cfe389c1e02)
- ETHERNET\_CHECKSUM\_SUPPORT\_UDP : [ethernet.h](group__ethernet.md#ggabf86b7f09a9d041eea25357cd7a85edea03e31130ecef7ac032bceed6f3091af8)
- ETHERNET\_DSA\_MASTER\_PORT : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a762faf9045477a959e9ec11ce099a883)
- ETHERNET\_DSA\_SLAVE\_PORT : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a77fe3d1049f9295102f3f2863df84dd7)
- ETHERNET\_DUPLEX\_SET : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a1e37eeba16e05b12580e5eacd36a25cc)
- ETHERNET\_HW\_FILTERING : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a50d1e4418926b586f6b50acd828f57fe)
- ETHERNET\_HW\_RX\_CHKSUM\_OFFLOAD : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a8341893ee775dca3609ce1316d948e33)
- ETHERNET\_HW\_TX\_CHKSUM\_OFFLOAD : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5aefaa7e72a676d6b1ad570a96be1a3861)
- ETHERNET\_HW\_VLAN : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a0bdf56b7f06fa68125bce800f9adfb95)
- ETHERNET\_HW\_VLAN\_TAG\_STRIP : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a1f33c56862228a647b583ae7e0605ac5)
- ETHERNET\_LINK\_1000BASE\_T : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a885ef0a35e462efa43e59c2f625964b8)
- ETHERNET\_LINK\_100BASE\_T : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a6fc62894c7ebe8697f1c45f4fc54ed3e)
- ETHERNET\_LINK\_10BASE\_T : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a26084acbb9f8c65fdb427c7d8b9b4fb6)
- ETHERNET\_LINK\_2500BASE\_T : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a68df8dcd314f5d0fb1c488aa13e868fb)
- ETHERNET\_LINK\_5000BASE\_T : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a9e8239e72e66276f194864f292268b9b)
- ETHERNET\_LLDP : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a8da4ebc3e888ac358f88aa9671e732c2)
- ETHERNET\_PRIORITY\_QUEUES : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a1e32518640964a73d4154ed8bc527475)
- ETHERNET\_PROMISC\_MODE : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5ad040f4a5749f66a377b840a4da8fb64d)
- ETHERNET\_PTP : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a604198d571bf2c4e7227bdeaefc2868a)
- ETHERNET\_QAV : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a7ec920ceb8cfba6424040079d6eeef42)
- ETHERNET\_QBU : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a68e30ff24a3eb75def8e154ac00dea08)
- ETHERNET\_QBV : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5acf17cbf803c3a0fe858ef939ccfe3b85)
- ETHERNET\_TXINJECTION\_MODE : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5a785ca3331fc7e92526d7c0faef34bd8b)
- ETHERNET\_TXTIME : [ethernet.h](group__ethernet.md#gga9162ff11d626813fc840df0b67820ac5ac72ff66c3172da29ec9fefad7593ffd2)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.0.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
